[package]
name = "tracer"
version = "0.1.0"
authors = ["Martin Eriksson <60point3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.2"
rand = "0.8.3"
ndarray = "0.15.1"

[profile.release]
debug = 1